--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,29 @@
 {
-  "name": "date-app",
+  "name": "natours",
   "version": "1.0.0",
-  "description": "Backend for an application for making friends and meeting new people",
+  "description": "Learning node, express and mongoDB",
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
-  "author": "Michał Jasiński",
+  "author": "Jonas Schmedtmann",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^3.5.0",
+    "helmet": "^3.16.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.1.1",
     "slugify": "^1.3.4",
-    "validator": "^10.11.0"
+    "validator": "^10.11.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
