--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "natours",
+  "name": "date-app",
   "version": "1.0.0",
-  "description": "Learning node, express and mongoDB",
+  "description": "Backend for an application for making friends and meeting new people",
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js"
   },
-  "author": "Jonas Schmedtmann",
+  "author": "Michał Jasiński",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
